--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17"
   },
